--- a/package.json
+++ b/package.json
@@ -15,9 +15,17 @@
     "bootstrap-vue": "^2.15.0",
     "chart.js": "2.9.3",
     "core-js": "^3.6.5",
-    "datatables.net-dt": "^1.13.6",
     "firebase": "^7.15.5",
+    "datatables.net-bs5": "^1.13.6",
+    "datatables.net-buttons": "^2.4.1",
+    "datatables.net-buttons-bs5": "^2.4.1",
+    "datatables.net-dt": "^1.13.6",
+    "datatables.net-editor": "^2.2.2",
+    "datatables.net-editor-bs5": "^2.2.0",
+    "datatables.net-editor-dt": "^2.2.0",
+    "datatables.net-select-dt": "^1.7.0",
     "jquery": "^3.7.0",
+    "select2": "^4.1.0-rc.0",
     "v-contextmenu": "^2.9.0",
     "video.js": "^7.8.3",
     "vue": "^2.6.11",
